--- a/01-inception/index.html
+++ b/01-inception/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Namste React | 01-Inception</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1>Chaithanya</h1>
+    </div>
 
     <script
       crossorigin
@@ -16,11 +19,7 @@
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
-    <script>
-      const root = document.getElementById("root");
-      const heading = document.createElement("h1");
-      heading.innerText = "Hello World from JS!";
-      root.appendChild(heading);
-    </script>
+
+    <script src="./app.js"></script>
   </body>
 </html>
