--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Namaste React</title>
   </head>
   <body>
-    <h1>Hello World 🚀</h1>
+    <div id="root"></div>
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
